--- a/signIn.html
+++ b/signIn.html
@@ -3,11 +3,21 @@
         <title> Procure to Pay Home </title>
         <link rel="stylesheet" type="text/css" href ="signIn.css">
     </head>
+   
     <body>
-        <a href="home/home.html">
-        	<div id="circle"></div>
-        	<div id="icon"></div>
-        </a>
+        <div id="circle"></div>
+        <div id="icon"></div>
         <div id="rectangle"></div>
+
+       <div id="login">
+            <h1>SIGN IN</h1>
+                <form>
+                <input type="text" class="text-line" placeholder="Company ID"> <br>
+                <input type="password" class="text-line" placeholder="Password"> <br>
+                <button type="button" class="submit-btn"> Login </button>
+                <button type="button" class="submit-btn"> Forgot </button>
+            </form>
+        </div>
     </body>
 </html>
+
