--- a/signIn.html
+++ b/signIn.html
@@ -14,7 +14,7 @@
                 <input type="text" name="username" class="text-line" placeholder="Company ID"> <br>
                 <input type="password" name="password" class="text-line" placeholder="Password"> <br>
                 <input type="Submit" class="submit-btn" value = "Login">
-                <button type="button" class="submit-btn"> Forgot </button>
+                <button class="submit-btn">Supplier</a></button> 
             </form>
         </div>
     </body>
